<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/addTaskButton"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:accessibilityLiveRegion="none"
  tools:context=".activities.AddTask">

  <TextView
...
    android:text="@string/add_task"
    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/createNewTask"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:text="@string/add_task"
    app:layout_constraintBottom_toTopOf="@+id/totalTasksText"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextNewTaskDescription" />

  <Button
    android:id="@+id/getPhotoForNewTask"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="32dp"
...
    android:text="@string/total_tasks"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/createNewTask" />

  <EditText
    android:id="@+id/editTextNewTaskTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/my_task"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@+id/editTextNewTaskDescription"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/addTaskTeamSpinner" />

  <EditText
    android:id="@+id/editTextNewTaskDescription"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:autofillHints=""
...
    app:layout_constraintTop_toBottomOf="@+id/editTextNewTaskTitle" />

  <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title"
    app:layout_constraintBottom_toTopOf="@+id/editTextNewTaskTitle"
    app:layout_constraintStart_toStartOf="@+id/editTextNewTaskTitle" />

  <TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
...
