...
  <string name="title_activity_add_task">addTask</string>
  <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
  <string name="hello_world">Hello Square World!</string>
  <string name="add_task">Add Task</string>
  <string name="total_tasks">Total cloudTasks:</string>
  <string name="my_task">My cloudTask</string>
  <string name="do_something">Do something</string>
  <string name="title">Title</string>
  <string name="description">Description</string>
  <string name="title_activity_all_tasks">AllTasks</string>
...
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="all_tasks">All Tasks</string>
  <string name="my_tasks">My Tasks</string>
  <string name="hero_image">hero image</string>
  <string name="submittedMsg">Submitted!</string>
  <string name="username">username</string>
  <string name="save">Save</string>
  <string name="settings">Settings</string>
  <string name="title_activity_settings">SettingsActivity</string>

  <!-- Preference Titles -->
  <string name="messages_header">Messages</string>
  <string name="sync_header">Sync</string>

...
