<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.Settings">

  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:text="@string/settings"
    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/editTextUsername"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    android:ems="10"
    android:hint="@string/username"
    android:importantForAutofill="no"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@+id/saveSettingsButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/teamSpinner" />

  <Button
    android:id="@+id/saveSettingsButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/save"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/SettingsSignUpButton"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

  <TextView
    android:id="@+id/textView7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/username"
    app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
    app:layout_constraintStart_toStartOf="@+id/editTextUsername" />

  <TextView
    android:id="@+id/currentuUernameText"
    android:layout_width="388dp"
    android:layout_height="51dp"
    android:layout_marginBottom="128dp"
    android:textAlignment="center"
    app:layout_constraintBottom_toTopOf="@+id/teamSpinner"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <Spinner
    android:id="@+id/teamSpinner"
    android:layout_width="188dp"
    android:layout_height="39dp"
    app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/currentuUernameText" />

  <Button
    android:id="@+id/SettingsSignUpButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Sign up"
    app:layout_constraintBottom_toTopOf="@+id/SettingsSignInButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/saveSettingsButton"
    app:layout_constraintTop_toTopOf="@+id/saveSettingsButton" />

  <TextView
    android:id="@+id/textView12"
    android:layout_width="100dp"
    android:layout_height="37dp"
    android:text="Sign Up to Save files to tasks."
    app:layout_constraintBottom_toTopOf="@+id/SettingsSignUpButton"
    app:layout_constraintEnd_toEndOf="@+id/SettingsSignUpButton"
    app:layout_constraintStart_toStartOf="@+id/SettingsSignUpButton" />

  <Button
    android:id="@+id/SettingsSignInButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="Sign In"
    app:layout_constraintBottom_toBottomOf="@+id/saveSettingsButton"
    app:layout_constraintEnd_toEndOf="@+id/SettingsSignUpButton"
    app:layout_constraintStart_toStartOf="@+id/SettingsSignUpButton"
    app:layout_constraintTop_toBottomOf="@+id/SettingsSignUpButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
