...
  android:layout_height="54dp"
  tools:context=".fragments.TaskFragment">

  <!-- TODO: Update blank fragment layout -->

  <Button
    android:id="@+id/taskFragmentTaskButton"
    android:layout_width="332dp"
    android:layout_height="wrap_content" />

</FrameLayout>

